--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ไม่เก็บ dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# ไม่เก็บไฟล์ build
+.next/
+.dist/
 
-# testing
-/coverage
+# ไม่เก็บไฟล์ความลับ
+.env
+.env.local
+next-env.d.ts
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# ไม่เก็บ log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# ไม่เก็บ config ของ editor
+.vscode/
+.idea/
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ไม่เก็บไฟล์ระบบของ macOS / Windows
+.DS_Store
+Thumbs.db
