--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "resend": "^4.6.0"
   },
   "devDependencies": {
